testsuite/tests/rename/should_fail/T27206.stderr
T27206.hs:13:21: error: [GHC-57392]
    Unknown source package ‘pkg-foo’ in foreign import prim.

